examples/should_fail/bad-borrow-send.anvil

chan reg_itfc = {
    right req : (logic@#0-#2)
}

proc reggg(e : right reg_itfc) =
    loop {
        let a = recv e::req in
        a =>
        dprint "Received %d" (a)
    }

proc top (e : left reg_itfc) =
    reg r : logic
    loop {
        set r := 1'b0 =>
        send e::req (!r) =>
        set r := 1'b1
    }

